--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,17 @@ before_install:
 
 install:
   - ./travis-tool.sh github_package jimhester/covr
+  - ./travis-tool.sh github_package jimhester/covr
+  - ./travis-tool.sh github_package jimhester/covr
   - ./travis-tool.sh install_deps
 
 script: ./travis-tool.sh run_tests
+
+after_success:
+  - Rscript -e 'library(covr);coveralls()'
+
+after_success:
+  - Rscript -e 'library(covr);coveralls()'
 
 after_success:
   - Rscript -e 'library(covr);coveralls()'
