--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Authors@R: as.person(c(
 Description: A thorough description
 License: MIT + file LICENSE
 Depends: R (>= 3.1.2)
+Suggests: testthat
